# algovoi-settlement-attestation

./: .gitignore  NOTICE  README.md
python/: pyproject.toml
python/algovoi_settlement_attestation/: __init__.py  settlement_attestation.py
python/tests/: test_settlement_attestation.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts  settlement-attestation.ts
typescript/test/: settlement-attestation.test.ts
