[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algovoi-settlement-attestation"
version = "0.1.0"
description = "AlgoVoi settlement attestation format reference implementation -- multi-chain categorical attestation under urn:x402:canonicalisation:jcs-rfc8785-v1, companion to algovoi-substrate compliance and refund receipts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "AlgoVoi", email = "chopmob@gmail.com" },
]
keywords = [
  "x402", "ap2", "a2a", "mpp",
  "jcs", "rfc8785", "canonicalisation",
  "agentic-payments", "settlement", "xchain",
  "audit-chain", "mica", "amlr", "psd2",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "algovoi-substrate>=0.3.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-cov>=4",
]

[project.urls]
Homepage = "https://api.algovoi.co.uk"
Documentation = "https://docs.algovoi.co.uk/settlement-attestation"
Repository = "https://github.com/chopmob-cloud/algovoi-settlement-attestation"
Issues = "https://github.com/chopmob-cloud/algovoi-settlement-attestation/issues"
IETF-I-D = "https://datatracker.ietf.org/doc/draft-hopley-x402-settlement-attestation/"

[tool.setuptools.packages.find]
where = ["."]
include = ["algovoi_settlement_attestation*"]

[tool.setuptools.package-data]
algovoi_settlement_attestation = ["py.typed"]
